--- a/Tela 1 - Inicial/tela inicial.html
+++ b/Tela 1 - Inicial/tela inicial.html
@@ -13,7 +13,7 @@
             <video autoplay muted loop id="video"> <source src="tela1.mp4" type="video/mp4"> </video>
         </div>
         <div class="botao">
-            <a id="btn" href="C:\Users\Loja\Desktop\Trabalho\Tela 2 - Login\tela2 - login.html"><b>acessar</b></a>
+            <a id="btn" href="C:\Users\Loja\Desktop\Trabalho\Tela 2 - Login\tela2 - login.html"><b>Acessar</b></a>
         </div>
     </di>
 </body>
