--- a/Tela 4 - Novo, editar modelo/Tela 4 - Novo, editar modelo.html
+++ b/Tela 4 - Novo, editar modelo/Tela 4 - Novo, editar modelo.html
@@ -13,7 +13,7 @@
             <video autoplay muted loop id="video"> <source src="tela1.mp4" type="video/mp4"> </video>
         </div>
 
-        <div class="input-form">
+        <div class="form-box">
             <form>
                 <fieldset border="0">
                         <div>
