--- a/Tela 5 - Menu Principal/Tela 5 - Menu Principal.html
+++ b/Tela 5 - Menu Principal/Tela 5 - Menu Principal.html
@@ -12,19 +12,16 @@
         <div class="cards">
             <div class="cardwrapper">
                 <div class="cardbox">
-                    <a class="menu-botao" href="#">Comprar</a>
+                    <a class="menu-botao" href="#">USUARIOS</a>
                 </div>
                 <div class="cardbox">
-                    <a class="menu-botao" href="#">Comprar</a>
+                    <a class="menu-botao" href="#">TEMPLATES</a>
                 </div>
                 <div class="cardbox">
-                    <a class="menu-botao" href="#">Comprar</a>
+                    <a class="menu-botao" href="#">CAMERAS</a>
                 </div>
                 <div class="cardbox">
-                    <a class="menu-botao" href="#">Comprar</a>
-                </div>
-                <div class="cardbox">
-                    <a class="menu-botao" href="#">Comprar</a>
+                    <a class="menu-botao" href="#">LOGS</a>
                 </div>
             </div>
         </div>
