--- a/Tela 6 - Lista de cadastro/Tela 6 - Gerenciamento de usuarios.html
+++ b/Tela 6 - Lista de cadastro/Tela 6 - Gerenciamento de usuarios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Tela 3 - Lista de modelos.css">
+    <link rel="stylesheet" href="Tela 5 - Gerenciamento de usuarios.css">
     <title>Template Tables</title>
 </head>
 <body>
@@ -17,28 +17,34 @@
             
             <table class="tables">
                 <tr>
-                    <th>NOME DO MODELO</th>
-                    <th>ESTRATÉGIA DE DETECÇÃO</th>
-                    <th>CAMINHO DO TEMPLATE</th>
-                    <th>VISUALIZAÇÃO</th>
+                    <th>NOME</th>
+                    <th>USERNAME</th>
+                    <th>SENHA</th>
+                    <th>CRIADO EM</th>
+                    <th>ATUALIZADO EM</th>
+                    <th>ÚLTIMO ACESSO</th>
                     <th>AÇÕES</th>
                     <th></th>
                 </tr>
 
                 <tr>
-                    <td>Controle Remoto</td>
-                    <td>ORB</td>
-                    <td>C://templates/controle.png</td>
-                    <td><a href="#"><img src="olho.png" id="eye"></a></td>
+                    <td>Bruno Iglesias</td>
+                    <td>bru.iglesias</td>
+                    <td>*******</td>
+                    <td>18/11/22</td>
+                    <td>18/11/22</td>
+                    <td>18/11/22</td>
                     <td><a id="edit-button" href="#">Editar</a></td>
                     <td><a id="del-button" href="#">Excluir</a></td>
                 </tr>
 
                 <tr>
-                    <td>Controle Remoto</td>
-                    <td>ORB</td>
-                    <td>C://templates/controle.png</td>
-                    <td><a href="#"><img src="olho.png" id="eye"></a></td>
+                    <td>Bruno Iglesias</td>
+                    <td>bru.iglesias</td>
+                    <td>*******</td>
+                    <td>18/11/22</td>
+                    <td>18/11/22</td>
+                    <td>18/11/22</td>
                     <td><a id="edit-button" href="#">Editar</a></td>
                     <td><a id="del-button" href="#">Excluir</a></td>
                 </tr>
