--- a/Tela 5 - Menu Principal/Tela 5 - Menu Principal.html
+++ b/Tela 5 - Menu Principal/Tela 5 - Menu Principal.html
@@ -8,23 +8,40 @@
     <title>Template Login</title>
 </head>
 <body>
-    <main>
-        <div class="cards">
-            <div class="cardwrapper">
-                <div class="cardbox">
-                    <a class="menu-botao" href="#">USUARIOS</a>
-                </div>
-                <div class="cardbox">
-                    <a class="menu-botao" href="#">TEMPLATES</a>
-                </div>
-                <div class="cardbox">
-                    <a class="menu-botao" href="#">CAMERAS</a>
-                </div>
-                <div class="cardbox">
-                    <a class="menu-botao" href="#">LOGS</a>
-                </div>
-            </div>
+  <div class="all-cards">
+    <a href="#">
+      <div class="card">
+        <div class="text">
+          <p>USUARIOS</p>
         </div>
-    </main>
+      </div>
+    </a>
+
+    <a href="#">
+      <div class="card">
+        <div class="text">
+          <p>TEMPLATES</p>
+        </div>
+      </div>
+    </a>
+
+    <a href="#">
+      <div class="card">
+        <div class="text">
+          <p>CAMERAS</p>
+        </div>
+      </div>
+    </a>
+
+    <div class="clear"></div>
+
+    <a href="#">
+      <div class="card">
+        <div class="text">
+          <p>LOGS</p>
+        </div>
+      </div>
+    </a>
+  </div>
 </body>
 </html>
