--- a/Tela 5 - Menu Principal/Tela 5 - Menu Principal.html
+++ b/Tela 5 - Menu Principal/Tela 5 - Menu Principal.html
@@ -9,39 +9,48 @@
 </head>
 <body>
   <div class="all-cards">
-    <a href="#">
-      <div class="card">
-        <div class="text">
-          <p>USUARIOS</p>
+    <div class="card">
+      <a href="#">
+        <div class="card-layout">
+          <div class="text">
+            <p>USUARIOS</p>
+          </div>
         </div>
-      </div>
-    </a>
+      </a>
+    </div>
 
-    <a href="#">
-      <div class="card">
-        <div class="text">
-          <p>TEMPLATES</p>
+    <div class="card">
+      <a href="#">
+        <div class="card-layout">
+          <div class="text">
+            <p>USUARIOS</p>
+          </div>
         </div>
-      </div>
-    </a>
+      </a>
+    </div>
 
-    <a href="#">
-      <div class="card">
-        <div class="text">
-          <p>CAMERAS</p>
+    <div class="card">
+      <a href="#">
+        <div class="card-layout">
+          <div class="text">
+            <p>USUARIOS</p>
+          </div>
         </div>
-      </div>
-    </a>
+      </a>
+    </div>
 
     <div class="clear"></div>
 
-    <a href="#">
-      <div class="card">
-        <div class="text">
-          <p>LOGS</p>
+    <div class="card">
+      <a href="#">
+        <div class="card-layout">
+          <div class="text">
+            <p>USUARIOS</p>
+          </div>
         </div>
-      </div>
-    </a>
+      </a>
+    </div>
+
   </div>
 </body>
 </html>
