--- a/Tela 5 - Menu Principal/Tela 5 - Menu Principal.html
+++ b/Tela 5 - Menu Principal/Tela 5 - Menu Principal.html
@@ -23,7 +23,7 @@
       <a href="#">
         <div class="card-layout">
           <div class="text">
-            <p>USUARIOS</p>
+            <p>TEMPLATES</p>
           </div>
         </div>
       </a>
@@ -33,7 +33,7 @@
       <a href="#">
         <div class="card-layout">
           <div class="text">
-            <p>USUARIOS</p>
+            <p>CAMERAS</p>
           </div>
         </div>
       </a>
@@ -45,7 +45,7 @@
       <a href="#">
         <div class="card-layout">
           <div class="text">
-            <p>USUARIOS</p>
+            <p>LOGS</p>
           </div>
         </div>
       </a>
